--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                               </div>
 
                               <div class="col-md-3 animate-box" data-animate-effect="fadeInRight">
-                           <a href="simple.html" target="_blank">
+                           <a href="ml.html" target="_blank">
                               <div class="services color-1">
                                  <span class="icon2"><i class="fa fa-user"></i></span>
                                  <h3>Simple Web Page</h3>
